--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,5 @@
 {
-    "minimum-stability": "dev",
-    "autoload": {
-        "psr-4": {"": "src/"}
-    },
     "require": {
-        "atk4/ui": "dev-develop-ui-mk2"
+        "atk4/ui": "*"
     }
 }
